--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "varya",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.2.0"
   },
